# Itmem

./:   .README.md.swo  .README.md.swp  .gitignore  README.md
Algosy/laba1/: l01z1.cpp  l01z1.py  l01z2.cpp  l01z3.cpp  l01z4.cpp  l01z5.cpp  l01z5.py
Algosy/laba10/: l10z1.cpp  l10z3.cpp  l10z4.cpp  l10z5.cpp
Algosy/laba11/: l11z1.cpp  l11z2.cpp  l11z3.cpp  l11z4.cpp  l11z5.cpp
Algosy/laba12/: l12z1.cpp  l12z2.cpp  l12z3.cpp  l12z4.cpp
Algosy/laba2/: l02z1.cpp  l02z2.cpp  l02z2.py  l02z3.cpp  l02z4.cpp  l02z5.cpp
Algosy/laba3/: guide.txt  l03z1.cpp  l03z2.cpp  l03z3.cpp  l03z4(struct).cpp  l03z4.cpp  l03z5.cpp
Algosy/laba4/: l04z1.cpp  l04z2.cpp  l04z3.cpp  l04z4.cpp  l04z5.cpp
Algosy/laba5/: l05z1.cpp  l05z2.cpp  l05z3.cpp  l05z4.cpp
Algosy/laba6/: l06z1.cpp  l06z2.cpp  l06z3.cpp  l06z4.cpp
Algosy/laba7/: l07z1.cpp  l07z2.cpp  l07z3.cpp  l07z4.cpp  l07z5.cpp
Algosy/laba8/: l08z1.cpp  l08z2.cpp  l08z3.cpp  l08z4.cpp  l08z5.cpp  l08z6.cpp
Algosy/laba9/: l09z1.cpp  l09z2.cpp  l09z3.cpp  l09z4.cpp  l09z5.cpp  l09z6.cpp
BD/: z1.sql  z2.sql  z3.sql
CifrovayaKultura/laba1/: M3105_КлишевичВадим_Работа1_Вариант7.docx  Работа_КлишевичВадим.dotx
OS/lab2-svyat/: CMakeLists.txt  README.md  Server.cpp  Server.h  TcpConnection.cpp  TcpConnection.h  crc32.c  dynamic_resource.cpp  dynamic_resource.h  hqsp.c  hqsp.cpp  hqsp.h  main.cpp  server.cpp  tcp_connection.cpp  tcp_connection.h
OS/lab2-svyat/processes/: CMakeLists.txt  create_process.cpp  create_process.h  logger.cpp  logger_wrapper.cpp  logger_wrapper.h  observer.cpp  observer.h  ps.cpp  ps.h  send_signal.cpp  send_signal.h  system_info.cpp  system_info.h  test.cpp
Proga/: Клишевич Вадим M3105; 1-4 лабы.docx  Клишевич Вадим M3105; 5-8 лабы.docx  Клишевич Вадим M3105; 9-12 лабы.docx
(+309 files in other folders)
